[package]
name = "mincd"
version = "0.1.6"
edition = "2021"
authors = ["tarneo"]
description = "A minimal remote Git repository watcher"
license = "GPL-2.0"
readme = "README.md"
repository = "https://github.com/tarneaux/mincd"
keywords = ["git", "watcher", "minimal"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
